# 0.00.08 (48319) Jan 28, 2011
Made it so that the pipes can't be dragged offscreen vertically
Made it so that the pipe control point can't be dragged offscreen vertically
Show second pressure sensor at a y location that yields a different pressure value
Hide the balloons
Fixed: units control panel background is incorrect
Don't show any particles near the edges, since their velocity should be zero in physical reality (or a full-blown fluid dynamics simulation)
Use new graphics for pressure sensor node
Added 3 patch image node for pressure sensor
replace incomplete "Reset All" node with ResetAllButtonNode
Use PropertyRadioButton in UnitsControlPanel
Added a grab handle to control the y offset of the input and output pipes
Added a dot icon to the "more" controls in the dots control slider label
Fixed initial location of dropper control
Use dropper control from membrane channels
Improved location for dot flow control
Fixed: make sure pipe top doesn't go below pipe bottom
Separated dots flow control from dropper
Fluid Flow: improved initial sensor locations
Made pipe curve continuously instead of linear
Moved spline computations from phetcommon to common/spline since it depends on Jama
Moved spline computations from energy-skate-park to phetcommon for reuse in fluid-pressure-and-flow
Added balloons
Simplified context interface for PressureSensor model
# 0.00.06 (46993) Dec 8, 2010
Fixed: Possible to deselect units radio buttons
Fixed: fluid color should change with density - fade to amber for honey, gray for gasoline.
Fixed: the first (zero) tick mark of the ruler should be at the very end, see #2604
Fixed: Ruler checkbox does not change selected when pressing ruler close button
Improved sensor nodes so they have an attached triangle tip pointing to the sensor hot spot
Moved velocity vector arrow behind the sensor triangle hot spot
Add a background to sensor nodes to make them look more sensory
Created class hierarchy for sensor nodes