@@ -1,3 +1,4 @@
+Added initial support for faucet in water-tower module
 # 0.00.08 (48319) Jan 28, 2011
 Made it so that the pipes can't be dragged offscreen vertically
 Made it so that the pipe control point can't be dragged offscreen vertically
